cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_C_STANDARD 11)

# Adding targets
add_executable(2235-c
        src/easy/2235-add-two-integers/2235-c.c)
add_executable(2235-cpp
        src/easy/2235-add-two-integers/2235-cpp.cpp)
add_executable(2236-c
        src/easy/2236-root-equals-sum-of-children/2236-c.c)
add_executable(283-c
        src/easy/283-move-zeros/283-c.c)
